--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts:
+  intl:
+  shimmer:
+  flutter_markdown: ^0.6.10
+  geolocator: 
+  location:
+  sqflite:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
